# fexc

./: Cargo.toml  remove_config.sh
assets/i18n/: en.toml  uk.toml
src/: app.rs  config.rs  fonts.rs  i18n.rs  main.rs  plugin.rs  window_frame.rs
src/i18n/: mod.rs
src/widgets/: editor.rs  menubar.rs  mod.rs  toolbar.rs  window_frame.rs
src/widgets/pages/: mod.rs  plugins.rs  project.rs  search.rs  settings.rs
