[package]
name = "fexc"
version = "0.1.0"
edition = "2024"

[dependencies]
catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui32"]}
dirs = "6.0.0"
eframe = "0.32.0"
egui = { version = "0.32.0", features = ["serde"] }
egui-phosphor = { version = "0.10.0", features = ["regular", "bold"] }
fs-err = "3.1.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.15"
toml = "0.9.5"
